# lecture-testing-task

./: .gitignore
.github/workflows/: gtest.yml
05_hw/: CMakeLists.txt  benchmark.cpp  gtest_stack.cpp  main.cpp  stack.cpp  stack.h
